# hw_sw_opt

./: .gitignore  README.md  fast_crypto.py  fast_crypto_perfetto.json  out_out.txt  perf.data.old  perf_report.txt  pyaes_perfetto.json
Scripts/: bash_script.sh  orjson_pyperf_bench.py  script_crypto_pyaes.sh
benchmarks/: MANIFEST  crypto_pyaes_simple_plus.py
benchmarks/benchmarks/bm_fast_crypto/: pyproject.toml  run_benchmark.py
benchmarks/bm_fast_crypto/: pyproject.toml
benchmarks/bm_fast_crypto/pyperformance_bm_fast_crypto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: fast.json  fast_20250825-165541.json  fast_report.txt  perf_diff.txt  perf_orjson_report.txt  perf_report.txt  pyaes.json  pyaes_20250825-165541.json  pyaes_report.txt  report_crypto_pyaes.txt  report_json_dumps.txt  timing_delta.txt
reports/Final reports/: report_crypto_pyaes.txt  report_json_dumps.txt
results/crypto_pyaes/: baseline.json  baseline.txt  baseline_20250824-104157.json  baseline_20250824-104157.txt  baseline_20250824-104157_perfed.json  baseline_perfed.json  before.json  before.txt  original.json  perf_report.txt  perf_report_baseline_20250824-104157.txt  perf_report_crypto_pyaes.txt  perf_report_simple_plus_20250824-121910.txt  simple_plus.json  simple_plus.txt  simple_plus_20250824-121910.json  simple_plus_aff0.json  simple_plus_vs_aff0.txt
scripts/: crypto_pyaes_quick.sh  run_crypto_pyaes_baseline.sh  run_crypto_pyaes_pgo.sh
