[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyperformance_bm_fast_crypto"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["pyperf", "cryptography"]

[tool.pyperformance]
# Name used by: pyperformance run --bench fast_crypto
name = "fast_crypto"

# Single-module layout
[tool.setuptools]
py-modules = ["run_benchmark"]
